[tool.poetry]
name = "astra"
version = "0.1.0"
description = ""
authors = ["Adam Parsons <adam@parsons.cloud>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.4"
cryptography = "^43.0.3"
openai = "^1.59.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

